[FEATURES] Implement Authentication with TypeORM and MYSQL, setup Redis, BlackList Refresh Token, Set up Model Voucher
