# src/apis/core_v1/routers/user.router.ts
@@ -1,13 +1,9 @@
 import { Router } from 'express';
-import {
-  registerController,
-  loginController,
-  getListUserController,
-  registerControllerTypeOrm,
-} from '../user/controllers';
+import { registerController, loginController, getListUserController } from '../user/controllers';
 import { verifyToken } from '../../modules/jwtService';
+import UserController from '../user/controllers';
 const userRouter: any = Router();
-// const userController = new UserController();
+const userController = new UserController();
 
 //Mongo db
 userRouter.post('/register', registerController);
@@ -15,8 +11,12 @@ userRouter.post('/login', loginController);
 userRouter.get('/list-users', verifyToken, getListUserController);
 
 //TypeOrm and mysql
-userRouter.post('/register-typeorm', registerControllerTypeOrm);
-userRouter.post('/login-typeorm', loginController);
-userRouter.get('/list-users-typeorm', verifyToken, getListUserController);
+//authecation
+userRouter.post('/register-typeorm', userController.register);
+userRouter.post('/login-typeorm', userController.login);
+userRouter.post('/refresh-token-typeorm', userController.refreshToken);
+userRouter.delete('/logout-typeorm', userController.logout);
+
+// userRouter.get('/list-users-typeorm', verifyToken, getListUserController);
 
 export default userRouter;
