# src/apis/core_v1/voucher/controllers.ts
@@ -1,27 +1,13 @@
-import { register, login, getList } from './services';
 import UserService from './services';
 import { NextFunction, Request, Response } from 'express';
 import IUserService from '../../../utils/interface';
-import * as _ from 'lodash';
 
-export async function registerController(req: Request, res: Response) {
-  return await register(req, res);
-}
-
-export async function loginController(req: Request, res: Response) {
-  return await login(req, res);
-}
-
-export async function getListUserController(req: Request, res: Response) {
-  return await getList(req, res);
-}
-
-class UserController {
+class VoucherController {
   userservice: IUserService;
   constructor() {
     this.userservice = new UserService();
   }
-  register = async (req: Request, res: Response, next: NextFunction) => {
+  createController = async (req: Request, res: Response, next: NextFunction) => {
     try {
       const result = await this.userservice.register(req.body);
       if (!result.data) res.status(parseInt(result.statusCode));
@@ -34,10 +20,9 @@ class UserController {
     }
   };
 
-  login = async (req: Request, res: Response, next: NextFunction) => {
+  updatePutController = async (req: Request, res: Response, next: NextFunction) => {
     try {
-      const body = _.pick(req.body, ['email', 'password']);
-      const result = await this.userservice.loginUser(body);
+      const result = await this.userservice.loginUser(req.body);
       if (!result.data) res.status(parseInt(result.statusCode));
       res.json({
         statusCode: result.statusCode,
@@ -49,7 +34,7 @@ class UserController {
     }
   };
 
-  refreshToken = async (req: Request, res: Response, next: NextFunction) => {
+  updatePathController = async (req: Request, res: Response, next: NextFunction) => {
     try {
       const result = await this.userservice.refreshToken(req.body);
       if (!result.data) res.status(parseInt(result.statusCode));
@@ -63,7 +48,7 @@ class UserController {
     }
   };
 
-  logout = async (req: Request, res: Response, next: NextFunction) => {
+  readListController = async (req: Request, res: Response, next: NextFunction) => {
     try {
       const result = await this.userservice.logout(req.body);
       if (!result.data) res.status(parseInt(result.statusCode));
@@ -76,6 +61,32 @@ class UserController {
       next(error);
     }
   };
+
+  readOneController = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      // const result = await this.userservice.createUser(req.body);
+      // if (!result.data) res.status(parseInt(result.statusCode));
+      // res.json({
+      //   statusCode: result.statusCode,
+      //   data: result.data ? result.data : null,
+      // });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  deleteController = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      // const result = await this.userservice.createUser(req.body);
+      // if (!result.data) res.status(parseInt(result.statusCode));
+      // res.json({
+      //   statusCode: result.statusCode,
+      //   data: result.data ? result.data : null,
+      // });
+    } catch (error) {
+      next(error);
+    }
+  };
 }
 
-export default UserController;
+export default VoucherController;
